# lox

./: CHANGELOG.md  README.md  lox.cabal  package.yaml  stack.yaml
app/: Main.hs
data/: parens.lox  scanning.lox  smarter.lox
src/: AstPrinter.hs  Expr.hs  MegaScanner.hs  Parser.hs  Scanner.hs  StatefulScanner.hs  Token.hs
src/effective/: Chapter7.hs
test/: Spec.hs
