cabal-version: 3.6
name:           lox
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ussgarci/lox#readme>
homepage:       https://github.com/ussgarci/lox#readme
bug-reports:    https://github.com/ussgarci/lox/issues
author:         ussgarci
maintainer:     ussgarci
copyright:      2023 USS Garci
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/lox

common base
  build-depends: base >=4.7 && <5

common containers
  build-depends: containers >=0.6.7 && <0.7

common megaparsec
  build-depends: megaparsec >=9.6.1 && <9.7

common mtl
  build-depends: mtl >=2.2.2 && <2.4

common text
  build-depends: text >= 2.0 && < 2.2 

common extra
  build-depends: extra >=1.8 && <1.9

common monad-loops
  build-depends: monad-loops == 0.4.3

library 
  exposed-modules:
      AstPrinter
      Expr
      MegaScanner
      Scanner
      StatefulScanner
      Token
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , containers
    , megaparsec
    , mtl
    , text
    , extra
    , monad-loops
  default-language: Haskell2010

executable lox-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , containers
    , lox
    , megaparsec
    , mtl
    , text
  default-language: Haskell2010

test-suite lox-test
  type: exitcode-stdio-1.0
  --ghc-options:  -main-is Test  try this
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , containers
    , lox
    , megaparsec
    , tasty >=0.10 && <1.6
    , tasty-hunit >=0.10 && <0.11   
    , text
  default-language: Haskell2010
